# molecules-renderer

./: .gitignore  CMakeLists.txt  README.md
model/: cube.txt  monkey  sphere.mtl
src/: graphics.cpp  graphics.h  main.cpp  mainwindow.ui  model.cpp  model.h  my_math.h  mymath.h  mywindow.ui  primitives.h  scene.cpp  scene.h  triangle.h  window.cpp  window.h
src/engine/: camera.h  loader.cpp  loader.h  mesh.cpp  mesh.h  rasterizer.cpp  rasterizer.h  render_manager.cpp  render_manager.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.h
src/math/: Mat4.cpp  Mat4.h  Math3D.h  Quat.cpp  Scalar.h  Transform.cpp  Vec3.h  Vec4.h  m3pch.cpp  m3pch.h
src/visualization/: molecula_generator.cpp  molecula_generator.h  resources.cpp  resources.h
src3/: main.cpp  window.cpp
src3/engine/: loader.cpp  loader.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.h
src3/math/: Quat.h  Scalar.cpp  Transform.h  Vec2.h  Vec3.cpp
